# src/main/kotlin/com/collect/invest/dao/entity/CollectablesEntity.kt
@@ -1,11 +1,11 @@
 package com.collect.invest.dao.entity
 
 data class CollectablesEntity(
-    val id: Int,
+    val id: Long,
     val name: String,
     val description: String,
     val category: String,
     val photoLink: String,
     val currentPrice: Double,
-    var availableShares: Int
+    val availableShares: Int
 );
